[package]
name = "agc-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agc-rs"
path = "src/bin/agc.rs"

[dependencies]
rusqlite   = { version = "0.39", features = ["bundled"] }
zstd       = "0.13"
flate2     = "1.1.9"
rayon      = "1"
voracious_radix_sort = { version = "1.2.0", features = ["voracious_multithread"] }
rustc-hash = "2"
thiserror  = "2"
clap       = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow     = "1"

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.39", features = ["bundled"] }
