[package]
name = "pgr-bin"
version = "0.8.0"
edition = "2021"
authors = ["Jason Chin <cschin@infoecho.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pgr-db = {path = "../pgr-db" }
flate2 = { version = "1.1.9", features = ["zlib-ng"], default-features = false }
log = { version = "^0.4.5", features = ["std"] }
clap = { version = "4.0.30", features = ["derive"] }
rustc-hash = "2.1.2"
rayon = "1.5.2"
regex = "1"
svg = "0.18"
kodama = "0.3.0"
memmap2 = "0.9.10"
bincode = { version = "2", features = ["alloc"] }
serde_json = "1.0.96"
serde = "1.0.163"
iset = "0.3.1"
rusqlite = { version = "0.39", features = ["bundled"] }

