[package]
name = "pgr-db"
version = "0.6.0"
edition = "2021"
authors = ["Jason Chin <cschin@infoecho.net>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]

[dependencies]
rustc-hash = "2.1.2"
flate2 = "1.1.9"
log = { version = "0.4.19", features = ["std", "max_level_debug", "release_max_level_warn"]}
simple_logger = "5"
rayon = "1.5.2"
libc = "0.2"
byteorder = "1.3.4"
petgraph = "0.8.3"
cuckoofilter = "0.5"
bgzip = "0.3.1"
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = "1.0.81"
regex = "1"
bincode = { version = "2", features = ["alloc"] }
memmap2 = "0.9.10"
wavefront-aln = {git = "https://github.com/cschin/wavefront-aln.git"}
agc-rs = { path = "../agc-rs" }
rusqlite = { version = "0.39", features = ["bundled"] }
