[package]
name = "pgr-server"
version = "0.1.0"
edition = "2021"
authors = ["Jason Chin <cschin@infoecho.net>"]

[dependencies]
pgr-db     = { path = "../pgr-db" }
axum       = { version = "0.7", features = ["macros"] }
tokio      = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap       = { version = "4", features = ["derive", "env"] }
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite   = { version = "0.39", features = ["bundled"] }
rayon      = "1"
anyhow     = "1"
tempfile   = "3"
