[package]
name = "pgrtk"
version = "0.6.0"
authors = ["Jason Chin <cschin@infoecho.net>"]
edition = "2021"


[lib]
name = "pgrtk"
crate-type = ["rlib","cdylib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }

pgr-db = { path = "../pgr-db/", default-features = false  }
rustc-hash = "2.1.2"
rayon = "1.5.2"
memmap2 = "0.9.10"

[features]
with_agc = []
default = ["pgr-db/with_agc", "with_agc"]
