[package]
name = "pgrtk"
version = "0.8.0"
authors = ["Jason Chin <cschin@infoecho.net>"]
edition = "2021"

[lib]
name = "pgrtk"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }

pgr-db = { path = "../pgr-db/" }
rustc-hash = "2.1.2"
rayon = "1.5.2"
memmap2 = "0.9.10"
